hphp/test/zend/good/ext/standard/tests/math/octdec_error.php.expectf
*** Testing octdec() :  error conditions ***

-- Incorrect number of arguments --

Warning: octdec() expects exactly 1 parameter, 0 given in %s/octdec_error.php on line 15

Warning: octdec() expects exactly 1 parameter, 2 given in %s/octdec_error.php on line 16

-- Incorrect input --

Catchable fatal error: Object of class classA could not be converted to string in %s/octdec_error.php on line 19
